manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reddit-deployment
  labels:

    app: reddit

spec:

  replicas: 2

  selector:

    matchLabels:

      app: reddit

  template:

    metadata:

      labels:
        app: reddit
    spec:
      containers:
      - name: reddit-clone
        image: anilkumarnooludocker/reddit-clone:latest
        ports:

        - containerPort: 3000
