manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reddit-service
  labels:
    app: reddit
spec:
  type: NodePort
  selector:
    app: reddit
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30008
